<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ui.activites.MyOrderDetailsActivity">
    
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_my_order_details_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/app_gradient_color_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_my_order_details"
            android:textSize="@dimen/title_textSize"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_my_order_details_activity">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <com.nguyenthinhatphuong.pu.utils.MSPTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/my_order_details_content_marginTopBottom"
                android:layout_marginStart="@dimen/my_order_details_content_marginStartEnd"
                android:layout_marginEnd="@dimen/my_order_details_content_marginStartEnd"
                android:layout_marginBottom="@dimen/my_order_details_content_paddingTopBottom"
                android:paddingTop="@dimen/my_order_details_content_paddingTopBottom"
                android:paddingBottom="@dimen/my_order_details_content_paddingTopBottom"
                android:text="@string/order_details_lbl"
                android:textColor="@color/colorSecondary"
                android:textSize="@dimen/my_order_details_lbl_textSize"/>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingStart="@dimen/my_order_details_content_paddingStartEnd"
                android:paddingBottom="@dimen/my_order_details_content_paddingTopBottom"
                android:paddingTop="@dimen/my_order_details_content_paddingTopBottom"
                android:paddingEnd="@dimen/my_order_details_content_paddingStartEnd">
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.nguyenthinhatphuong.pu.utils.MSPTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/order_details_lbl_order_id"
                        android:textColor="@color/colorDarkGreyr"
                        android:textSize="@dimen/my_order_details_lbl_textSize"/>
                    <com.nguyenthinhatphuong.pu.utils.MSPTextViewBold
                        android:id="@+id/tv_order_details_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/colorSecondary"
                        android:textSize="@dimen/my_order_details_lbl_textSize"
                        tools:text="12345"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.nguyenthinhatphuong.pu.utils.MSPTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/order_details_lbl_order_date"
                        android:textColor="@color/colorDarkGreyr"
                        android:textSize="@dimen/my_order_details_lbl_textSize"/>
                    <com.nguyenthinhatphuong.pu.utils.MSPTextViewBold
                        android:id="@+id/tv_order_details_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/colorSecondary"
                        android:textSize="@dimen/my_order_details_lbl_textSize"
                        tools:text="21 oct 2023"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.nguyenthinhatphuong.pu.utils.MSPTextView
                        
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/order_details_lbl_order_status"
                        
                        android:textColor="@color/colorDarkGreyr"
                        android:textSize="@dimen/my_order_details_lbl_textSize"/>
                    <com.nguyenthinhatphuong.pu.utils.MSPTextView
                        android:id="@+id/tv_order_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_status_pending"
                        android:textAlignment="center"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="@dimen/my_order_details_lbl_textSize"/>
                        
                        
                    
                </LinearLayout>
            </LinearLayout>
            
            <com.nguyenthinhatphuong.pu.utils.MSPTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/my_order_details_content_marginTopBottom"
                android:layout_marginStart="@dimen/my_order_details_content_marginStartEnd"
                android:layout_marginEnd="@dimen/my_order_details_content_marginStartEnd"
                android:paddingTop="@dimen/my_order_details_content_paddingTopBottom"
                android:paddingBottom="@dimen/my_order_details_content_paddingTopBottom"
                android:text="@string/checkout_lbl_product_items"
                android:textColor="@color/colorSecondary"
                android:textSize="@dimen/my_order_details_lbl_textSize"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_my_order_items_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.nguyenthinhatphuong.pu.utils.MSPTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/my_order_details_content_marginTopBottom"
                android:layout_marginStart="@dimen/my_order_details_content_marginStartEnd"
                android:layout_marginEnd="@dimen/my_order_details_content_marginStartEnd"
                android:paddingTop="@dimen/my_order_details_content_paddingTopBottom"
                android:paddingBottom="@dimen/my_order_details_content_paddingTopBottom"
                
                android:text="@string/order_details_lbl_shipping_address"
                android:textColor="@color/colorSecondary"
                android:textSize="@dimen/my_order_details_lbl_textSize"/>
        <LinearLayout
            android:id="@+id/ll_my_order_address_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rv_my_order_items_list"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/my_order_details_content_marginTopBottom"
            android:layout_marginStart="@dimen/my_order_details_content_marginStartEnd"
            android:layout_marginEnd="@dimen/my_order_details_content_marginStartEnd"
            android:layout_marginBottom="@dimen/my_order_details_content_marginTopBottom">
            <com.nguyenthinhatphuong.pu.utils.MSPTextView
                android:id="@+id/tv_my_order_details_address_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/address_details_marginTop"
                android:paddingBottom="@dimen/address_details_marginTop"
                android:textColor="@color/item_value_text_color"
                android:textSize="@dimen/address_details_textSize"
                android:textStyle="bold"
                tools:text="Home"/>
            <com.nguyenthinhatphuong.pu.utils.MSPTextView
                android:id="@+id/tv_my_order_details_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/address_details_marginTop"
                android:paddingBottom="@dimen/address_details_marginTop"
                android:textColor="@color/item_value_text_color"
                android:textSize="@dimen/address_details_textSize"
                tools:text="Nhat Phuong"/>
            <com.nguyenthinhatphuong.pu.utils.MSPTextView
                android:id="@+id/tv_my_order_details_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/address_details_marginTop"
                android:paddingBottom="@dimen/address_details_marginTop"
                android:textColor="@color/item_value_text_color"
                android:textSize="@dimen/address_details_textSize"
                tools:text="XYZ"/>
            <com.nguyenthinhatphuong.pu.utils.MSPTextView
                android:id="@+id/tv_my_order_details_additional_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/address_details_marginTop"
                android:paddingBottom="@dimen/address_details_marginTop"
                android:textColor="@color/item_value_text_color"
                android:textSize="@dimen/address_details_textSize"
                tools:text="XYZ"/>
            <com.nguyenthinhatphuong.pu.utils.MSPTextView
                android:id="@+id/tv_my_order_details_other_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/address_details_marginTop"
                android:paddingBottom="@dimen/address_details_marginTop"
                android:textColor="@color/item_value_text_color"
                android:textSize="@dimen/address_details_textSize"
                tools:text="XYZ"/>
            <com.nguyenthinhatphuong.pu.utils.MSPTextView
                android:id="@+id/tv_my_order_details_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/address_details_marginTop"
                android:paddingBottom="@dimen/address_details_marginTop"
                android:textColor="@color/item_value_text_color"
                android:textSize="@dimen/address_details_textSize"
                tools:text="0363419330"/>

        <com.nguyenthinhatphuong.pu.utils.MSPTextView
            android:id="@+id/tv_items_receipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rv_cart_list_items"
            android:layout_marginStart="@dimen/my_order_details_content_marginStartEnd"
            android:layout_marginBottom="@dimen/my_order_details_content_marginTopBottom"
            android:layout_marginEnd="@dimen/my_order_details_content_marginStartEnd"
            android:layout_marginTop="@dimen/my_order_details_content_marginTopBottom"
            android:paddingTop="@dimen/my_order_details_content_paddingTopBottom"
            android:paddingBottom="@dimen/my_order_details_content_paddingTopBottom"
            android:textSize="@dimen/my_order_details_lbl_textSize"
            android:text="@string/checkout_lbl_items_receipt"
            android:textColor="@color/colorSecondary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.nguyenthinhatphuong.pu.utils.MSPTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_subtotal"
                android:textSize="@dimen/lbl_order_details_textSize"
                android:textColor="@color/colorDarkGreyr"/>
            <com.nguyenthinhatphuong.pu.utils.MSPTextViewBold
                android:id="@+id/tv_order_details_subtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/my_order_details_lbl_textSize"
                android:textColor="@color/colorDarkGreyr"
                tools:text="$100"/>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.nguyenthinhatphuong.pu.utils.MSPTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_shipping_charge"
                android:textSize="@dimen/lbl_order_details_textSize"
                android:textColor="@color/colorDarkGreyr"/>
            <com.nguyenthinhatphuong.pu.utils.MSPTextViewBold
                android:id="@+id/tv_my_order_details_shipping_charge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/checkout_label_value_textSize"
                android:textColor="@color/colorDarkGreyr"
                android:text="$10"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.nguyenthinhatphuong.pu.utils.MSPTextViewBold
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tbl_total_amount"
                android:textSize="@dimen/lbl_order_details_textSize"
                android:textColor="@color/colorDarkGreyr"/>
            <com.nguyenthinhatphuong.pu.utils.MSPTextViewBold
                android:id="@+id/tv_my_order_details_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/checkout_label_value_textSize"
                android:textColor="@color/colorDarkGreyr"
                tools:text="$110"/>
        </LinearLayout>
        </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingTop="@dimen/my_order_details_content_paddingTopBottom"
                android:paddingBottom="@dimen/my_order_details_content_paddingTopBottom"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <com.nguyenthinhatphuong.pu.utils.MSPTextViewBold
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lbl_paymment_mode"
                    android:textColor="@color/colorDarkGreyr"
                    android:textSize="@dimen/lbl_order_details_textSize"/>
                <com.nguyenthinhatphuong.pu.utils.MSPTextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_cash_on_delivery"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="@dimen/lbl_order_details_textSize"/>




        </LinearLayout>
            <com.nguyenthinhatphuong.pu.utils.MSPButton
                android:id="@+id/btn_confirm_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:paddingTop="@dimen/btn_padding"
                android:paddingBottom="@dimen/btn_padding"
                android:text="CONFIRM ORDER"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
                
                
        </LinearLayout>
    </ScrollView>


        

</androidx.constraintlayout.widget.ConstraintLayout>