<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ui.activites.AddressListActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_address_list_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/app_gradient_color_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:text="@string/title_address_list"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title_text_Size"
            android:textStyle="bold"/>



    </androidx.appcompat.widget.Toolbar>
    <com.nguyenthinhatphuong.pu.utils.MSPTextView
        android:id="@+id/tv_add_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btn_add_address_margin"
        android:background="@drawable/app_gradient_color_boder_background"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/btn_add_address_padding"
        android:text="@string/lbl_addresses"
        android:textColor="@android:color/holo_red_light"
        android:textSize="@dimen/add_address_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_address_list_activity"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_address_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/rv_address_list_marginTop"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv_add_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.nguyenthinhatphuong.pu.utils.MSPTextView
        android:id="@+id/tv_no_address_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/no_address_found"
        android:textAlignment="center"
        android:textColor="@color/colorSecondary"
        android:textSize="@dimen/no_data_found_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>





</androidx.constraintlayout.widget.ConstraintLayout>